add more appropriately used JSDoc declarations and Decorators
